--- a/index.html
+++ b/index.html
@@ -4,75 +4,117 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="img/png" href="./imgs/droneIcone.png">
+    <link rel="stylesheet" href="style.css">
     <title>Drones</title>
 </head>
 
 <body>
-    <h1 style="display: flex; justify-content: center; color: blue; font-size: 3rem;">Drones - Fiap</h1>
 
-    <hr>
-    <div>
-        <h2 style="color: blueviolet;">Drone Air666</h2>
-        <img src="./imgs/drone01.jpg" alt="Drone cinza voando">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, est?</p>
-        <a href="https://www.lojadji.com.br/" target="_blank">Mais informações</a>
+    <h1 class="container__titulo">Drones - Fiap</h1>
 
-        <h3>Características:</h3>
-        <ol>
-            <li>Peso: 1.2kgs</li>
-            <li>Autonomia: 4h</li>
+
+<section class="container__primario">
+    <h2 class="titulo__drone">Drone Air</h2>
+<div class="container__drone">
+        <img src="./imgs/drone01.jpg" alt="Drone cinza voando" class="drone__img">
+    <div class="container__descricao">
+        <div class="container__explicacao">
+        <p class="descricao__drone">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, est?</p>
+        <a href="https://www.lojadji.com.br/" target="_blank" class="link__drone">Mais informações</a>
+        </div>
+
+        <div class="container__caracteristicas">
+        <h3 class="titulo__caracteristicas">Características:</h3>
+        <ol class="container__lista">
+            <li>Peso: 2kgs</li>
+            <li>Autonomia: 8h</li>
             <li>Velocidade: 90km/h</li>
         </ol>
 
-        <ul>
-            <li>Peso: 1.2kgs</li>
-            <li>Autonomia: 4h</li>
+        <ul class="container__lista">
+            <li>Peso: 2kgs</li>
+            <li>Autonomia: 8h</li>
             <li>Velocidade: 90km/h</li>
         </ul>
-    </div>
-    
-    <hr>
-    <div>
-        <h2 style="color: blueviolet;">Drone Air333</h2>
-        <img src="./imgs/drone02.jpg" alt="Drone cinza voando">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, est?</p>
-        <a href="https://www.lojadji.com.br/" target="_blank">Mais informações</a>
+        </div>
 
-        <h3>Características:</h3>
-        <ol>
-            <li>Peso: 2.0kgs</li>
-            <li>Autonomia: 6h</li>
-            <li>Velocidade: 65km/h</li>
+        <div class="container__botao">
+            <a href="https://www.lojadji.com.br/" target="_blank">Comprar</a>
+        </div>
+
+    </div>
+</div>
+</section>
+
+
+<section class="container__primario">
+    <h2 class="titulo__drone">Drone Plus</h2>
+<div class="container__drone">
+        <img src="./imgs/drone02.jpg" alt="Drone cinza voando" class="drone__img">
+    <div class="container__descricao">
+        <div class="container__explicacao">
+        <p class="descricao__drone">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, est?</p>
+        <a href="https://www.lojadji.com.br/" target="_blank" class="link__drone">Mais informações</a>
+        </div>
+
+        <div class="container__caracteristicas">
+        <h3 class="titulo__caracteristicas">Características:</h3>
+        <ol class="container__lista">
+            <li>Peso: 1.2kgs</li>
+            <li>Autonomia: 4h</li>
+            <li>Velocidade: 60km/h</li>
         </ol>
 
-        <ul>
-            <li>Peso: 2.0kgs</li>
-            <li>Autonomia: 6h</li>
-            <li>Velocidade: 65km/h</li>
+        <ul class="container__lista">
+            <li>Peso: 1.2kgs</li>
+            <li>Autonomia: 4h</li>
+            <li>Velocidade: 60km/h</li>
         </ul>
-    </div>
-   
-    <hr>
-    <div>
-        <h2 style="color: blueviolet;">Drone Fiap</h2>
-        <img src="./imgs/drone03.jpg" alt="Drone cinza voando">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, est?</p>
-        <a href="https://www.lojadji.com.br/" target="_blank">Mais informações</a>
+        </div>
 
-        <h3>Características:</h3>
-        <ol>
-            <li>Peso: 2.5kgs</li>
-            <li>Autonomia: 8h</li>
-            <li>Velocidade: 95km/h</li>
+        <div class="container__botao">
+            <a href="https://www.lojadji.com.br/" target="_blank">Comprar</a>
+        </div>
+
+    </div>
+</div>
+</section> 
+
+
+<section class="container__primario">
+    <h2 class="titulo__drone">Drone Plus+</h2>
+<div class="container__drone">
+        <img src="./imgs/drone03.jpg" alt="Drone cinza voando" class="drone__img">
+    <div class="container__descricao">
+        <div class="container__explicacao">
+        <p class="descricao__drone">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, est?</p>
+        <a href="https://www.lojadji.com.br/" target="_blank" class="link__drone">Mais informações</a>
+        </div>
+
+        <div class="container__caracteristicas">
+        <h3 class="titulo__caracteristicas">Características:</h3>
+        <ol class="container__lista">
+            <li>Peso: 1.5kgs</li>
+            <li>Autonomia: 6h</li>
+            <li>Velocidade: 75km/h</li>
         </ol>
 
-        <ul>
-            <li>Peso: 2.5kgs</li>
-            <li>Autonomia: 8h</li>
-            <li>Velocidade: 95km/h</li>
+        <ul class="container__lista">
+            <li>Peso: 1.5kgs</li>
+            <li>Autonomia: 6h</li>
+            <li>Velocidade: 75km/h</li>
         </ul>
+        </div>
+
+        <div class="container__botao">
+            <a href="https://www.lojadji.com.br/" target="_blank">Comprar</a>
+        </div>
+
     </div>
+</div>
+</section>
+
 
 </body>
-
 </html>
