--- a/index.html
+++ b/index.html
@@ -20,18 +20,12 @@
         <img src="./imgs/drone01.jpg" alt="Drone cinza voando" class="drone__img">
     <div class="container__descricao">
         <div class="container__explicacao">
-        <p class="descricao__drone">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, est?</p>
+        <p class="descricao__drone">Drone leve e compacto com câmera 4K, autonomia de 31 minutos e alcance de até 10 km, ideal para iniciantes.</p>
         <a href="https://www.lojadji.com.br/" target="_blank" class="link__drone">Mais informações</a>
         </div>
 
         <div class="container__caracteristicas">
         <h3 class="titulo__caracteristicas">Características:</h3>
-        <ol class="container__lista">
-            <li>Peso: 2kgs</li>
-            <li>Autonomia: 8h</li>
-            <li>Velocidade: 90km/h</li>
-        </ol>
-
         <ul class="container__lista">
             <li>Peso: 2kgs</li>
             <li>Autonomia: 8h</li>
@@ -54,18 +48,12 @@
         <img src="./imgs/drone02.jpg" alt="Drone cinza voando" class="drone__img">
     <div class="container__descricao">
         <div class="container__explicacao">
-        <p class="descricao__drone">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, est?</p>
+        <p class="descricao__drone">Drone profissional com câmera de 50 MP, gravação em 6K e autonomia de 40 minutos, perfeito para cinegrafistas.</p>
         <a href="https://www.lojadji.com.br/" target="_blank" class="link__drone">Mais informações</a>
         </div>
 
         <div class="container__caracteristicas">
         <h3 class="titulo__caracteristicas">Características:</h3>
-        <ol class="container__lista">
-            <li>Peso: 1.2kgs</li>
-            <li>Autonomia: 4h</li>
-            <li>Velocidade: 60km/h</li>
-        </ol>
-
         <ul class="container__lista">
             <li>Peso: 1.2kgs</li>
             <li>Autonomia: 4h</li>
@@ -88,18 +76,12 @@
         <img src="./imgs/drone03.jpg" alt="Drone cinza voando" class="drone__img">
     <div class="container__descricao">
         <div class="container__explicacao">
-        <p class="descricao__drone">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, est?</p>
+        <p class="descricao__drone">Drone compacto com câmera 4K HDR e inclinação de 180°, autonomia de 25 minutos, ótimo para capturas criativas.</p>
         <a href="https://www.lojadji.com.br/" target="_blank" class="link__drone">Mais informações</a>
         </div>
 
         <div class="container__caracteristicas">
         <h3 class="titulo__caracteristicas">Características:</h3>
-        <ol class="container__lista">
-            <li>Peso: 1.5kgs</li>
-            <li>Autonomia: 6h</li>
-            <li>Velocidade: 75km/h</li>
-        </ol>
-
         <ul class="container__lista">
             <li>Peso: 1.5kgs</li>
             <li>Autonomia: 6h</li>
